--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>TypeScript HTML App</title>
     <link rel="stylesheet" href="app.css" type="text/css" />
     <script src="/out/main.js"></script>
+    <script src="/out/math.js"></script>
 </head>
 <body>
     <canvas id="myCanvas" width="800" height="600"></canvas>
