--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <title>TypeScript HTML App</title>
     <link rel="stylesheet" href="app.css" type="text/css" />
+    <script src="/out/api-for-canvas.js"></script>
     <script src="/out/math.js"></script>
     <script src="/out/main.js"></script>
     
